--- a/templates/dashboards/admin/all_orders.html
+++ b/templates/dashboards/admin/all_orders.html
@@ -563,15 +563,14 @@
 <body>
     <!-- Custom Responsive Navigation -->
     <aside class="custom-sidebar" id="sidebar">
-        <h1 class="sidebar-title">Manager<span style="color: rgb(250, 250, 121);">Pro</span></h1>
+        <h1 class="sidebar-title">Admin<span style="color: rgb(250, 250, 121);">Pro</span></h1>
         <ul class="sidebar-menu">
-            <li><a href="/manager/dashboard" class="sidebar-link "><i class="bi bi-speedometer2"></i><span>Dashboard</span></a></li>
-            <li><a href="/manager/verify-orders" class="sidebar-link"><i class="bi bi-calendar-check"></i> <span>Verify Order</span></a></li>
-            <li><a href="/manager/all-orders" class="sidebar-link active"><i class="bi bi-clipboard-data"></i><span>All Orders</span></a></li>
-            <li><a href="/manager/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
-            <li><a href="/manager/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
-            <li><a href="/manager/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
-            <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
+            <li><a href="/admin/dashboard" class="sidebar-link"><i class="bi bi-speedometer2"></i><span>Dashboard</span></a></li>
+            <li><a href="/admin/all-orders" class="sidebar-link active"><i class="bi bi-clipboard-data"></i><span>All Orders</span></a></li>
+            <li><a href="/admin/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
+            <li><a href="/admin/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
+            <li><a href="/admin/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
+            <li><a href="/admin/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
         <!-- User Card -->
